# spec_exploration

./: Cargo.toml
eth2/types/: Cargo.toml
eth2/types/src/: beacon_state.rs  chain_spec.rs  constants.rs  cross_link.rs  eth_spec.rs  execution_environment.rs  fork.rs  lib.rs  newtypes.rs  serde_utils.rs  u64_macros.rs
eth2/utils/int_to_bytes/: Cargo.toml
eth2/utils/int_to_bytes/src/: lib.rs
eth2/utils/serde_hex/: Cargo.toml
eth2/utils/serde_hex/src/: lib.rs
eth2/utils/ssz_types/: Cargo.toml
eth2/utils/ssz_types/src/: bitfield.rs  fixed_vector.rs  lib.rs  tree_hash.rs  variable_list.rs
server/: Cargo.toml
