#[package]
#name = "spec-practice"
#version = "0.1.0"
#authors = ["Greg Trowbridge <gjtrowbridge@gmail.com>"]
#edition = "2018"

[workspace]

members = [
    "eth2/types",
    "eth2/utils/int_to_bytes",
    "server",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#eth2_ssz = "0.1.2"
#serde = { version = "1.0", features = ["derive"] }
#slog = "2.5.2"
#tree_hash = "0.1.0"