[package]
name = "int_to_bytes"
version = "0.1.0"
authors = ["Greg Trowbridge <gjtrowbridge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4.12"

[dev-dependencies]
yaml-rust = "0.4.3"
hex = "0.3"
