[package]
name = "ssz_types"
version = "0.1.0"
authors = ["Greg Trowbridge <gjtrowbridge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree_hash = "0.1.0"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_hex = { path = "../serde_hex" }
eth2_ssz = "0.1.2"
typenum = "1.11.2"

[dev-dependencies]
serde_yaml = "0.8.11"
tree_hash_derive = "0.1"